# ROS2-Mobile-Manipulator

./: Dockerfile  README.md  autostart.sh  config.sh
omx_real_pick/launch/: hardware.launch.py
omx_real_pick/scripts/: aruco_realsense.py
omx_real_pick/src/: 0305  225  codex  real_pick_node.cpp  study
scripts/: run_docker.sh
wave_rover/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
wave_rover/install/waver_description/share/ament_index/resource_index/package_run_dependencies/: waver_description
wave_rover/install/waver_description/share/waver_description/: local_setup.sh  package.sh  package.xml
wave_rover/install/waver_description/share/waver_description/cmake/: waver_descriptionConfig.cmake
wave_rover/install/waver_description/share/waver_description/launch/: description.launch.xml
wave_rover/install/waver_description/share/waver_description/urdf/: depth_camera_zedxm.xacro  imu.xacro  rasp_pi_camera.xacro  waver.xacro
wave_rover/install/waver_gazebo/share/ament_index/resource_index/package_run_dependencies/: waver_gazebo
wave_rover/install/waver_gazebo/share/waver_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
wave_rover/install/waver_gazebo/share/waver_gazebo/cmake/: waver_gazeboConfig.cmake
wave_rover/install/waver_gazebo/share/waver_gazebo/config/: ros_gz_bridge.yaml
wave_rover/install/waver_gazebo/share/waver_gazebo/launch/: gazebo.launch.xml
wave_rover/install/waver_gazebo/share/waver_gazebo/worlds/: room.sdf
wave_rover/install/waver_nav/share/waver_nav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
wave_rover/install/waver_nav/share/waver_nav/cmake/: waver_navConfig.cmake
wave_rover/install/waver_nav/share/waver_nav/launch/: async_slam_toolbox.launch.xml  lifecycle_manager.launch.xml  map_saver.launch.xml  map_server.launch.xml
wave_rover/install/waver_nav/share/waver_nav/maps/: coworking_map.pgm  coworking_map.yaml
wave_rover/install/waver_nav/share/waver_nav/rviz/: waver.rviz
wave_rover/install/waver_viz/share/waver_viz/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
wave_rover/install/waver_viz/share/waver_viz/cmake/: waver_vizConfig.cmake
wave_rover/install/waver_viz/share/waver_viz/launch/: rviz.launch.xml
wave_rover/install/waver_viz/share/waver_viz/rviz/: waver.rviz
wave_rover/log/: latest_build
waver_description/: CMakeLists.txt  README.md  package.xml
waver_description/launch/: description.launch.xml
waver_description/urdf/: lidar.xacro  util.xacro  waver.gazebo.xacro
waver_gazebo/: CMakeLists.txt  package.xml
waver_gazebo/launch/: gazebo.launch.xml
waver_nav/: CMakeLists.txt  package.xml
waver_viz/: CMakeLists.txt  package.xml
waver_viz/launch/: rviz.launch.xml
waver_viz/rviz/: waver.rviz
(+3 files in other folders)
