<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_description</name>
  <version>1.0.0</version>
  <description>The waver_description package</description>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>rosidl_default_generators</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
