<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waver_viz</name>
  <version>1.0.0</version>
  <description>The waver_viz package</description>
  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
